[project]
name = "streamlit-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "jsonpatch>=1.33",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-pinecone>=0.2.13",
    "langchain-upstage>=0.7.5",
    "langsmith>=0.5.0",
    "notebook>=7.5.1",
    "packaging>=24.2",
    "streamlit>=1.52.2",
]
